--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,58 +1,34 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "Phase 4: integrate a conversational 'Secretary' layer to manage tasks via intents.",
+  "summary": "Project to set up neighborhood-based instances using geography data and user location mapping.",
   "architectural_notes": [
-    "Secretary layer will use explicit intents (create_task, find_tasks, update_task) to route task actions to backend APIs."
+    "Neighborhood instance selection should use existing geography data and map each user to exactly one local instance based on detected or chosen location."
   ],
   "known_issues": [],
   "isFixRequest": false,
   "existing_features": [
     {
-      "id": "feature-extend-the-secretary-intent-type-system-to-include-three-new-intents-create-task-find-tasks-and-update-task",
-      "title": "Extend the Secretary intent type system to include three new intents: create_task, find_tasks, and update_task.",
+      "id": "feature-use-the-existing-u-s-geography-dataset-and-existing-geography-query-hooks-to-let-the-user-choose-a-location-state-county-place-and-derive-a-single-canonical-locationid-hierarchicalid-for-the-session-device",
+      "title": "Use the existing U.S. geography dataset and existing geography query hooks to let the user choose a location (state → county → place) and derive a single canonical locationId (hierarchicalId) for the session/device.",
       "reqIds": [
         "REQ-1"
       ],
       "version": 1
     },
     {
-      "id": "feature-add-task-related-slot-definitions-required-to-fulfill-the-new-task-intents-including-at-minimum-task-title-task-description-task-category-location-identifier-and-task-identifier-for-updates-ensure-an-empty-slot-bag-can-be-created-and-slot-fill-clear-checks-work-for-the-new-slots",
-      "title": "Add task-related slot definitions required to fulfill the new task intents, including at minimum: task title, task description, task category, location identifier, and task identifier (for updates). Ensure an empty slot bag can be created and slot fill/clear checks work for the new slots.",
+      "id": "feature-add-a-location-acquisition-flow-that-supports-either-a-detecting-device-location-via-the-browser-geolocation-api-or-b-manually-choosing-a-location-with-clear-fallback-behavior-when-permission-is-denied-or-unavailable",
+      "title": "Add a location acquisition flow that supports either (a) detecting device location via the browser Geolocation API or (b) manually choosing a location, with clear fallback behavior when permission is denied or unavailable.",
       "reqIds": [
         "REQ-2"
       ],
       "version": 1
     },
     {
-      "id": "feature-update-the-rule-based-intent-classifier-to-recognize-the-new-intents-from-common-user-phrasing-e-g-create-a-task-show-tasks-find-tasks-update-task-mark-task-done-without-breaking-existing-intents",
-      "title": "Update the rule-based intent classifier to recognize the new intents from common user phrasing (e.g., “create a task”, “show tasks”, “find tasks”, “update task”, “mark task done”), without breaking existing intents.",
+      "id": "feature-map-the-chosen-detected-user-location-to-exactly-one-local-whisper-instance-name-and-use-that-instance-consistently-in-the-feed-persisting-the-chosen-location-so-subsequent-visits-reopen-the-same-local-instance-by-default",
+      "title": "Map the chosen/detected user location to exactly one local Whisper instance name and use that instance consistently in the Feed, persisting the chosen location so subsequent visits reopen the same local instance by default.",
       "reqIds": [
         "REQ-3"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-register-the-new-intents-in-the-intent-flow-registry-with-required-optional-slots-and-a-slot-fill-order-and-define-completion-behavior-hooks-for-each-intent",
-      "title": "Register the new intents in the intent flow registry with required/optional slots and a slot fill order, and define completion behavior hooks for each intent.",
-      "reqIds": [
-        "REQ-4"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-add-english-slot-filling-prompts-for-the-new-task-slots-so-the-secretary-can-ask-for-missing-task-information-during-an-intent-flow-e-g-ask-for-title-description-location-category-and-which-task-to-update",
-      "title": "Add English slot-filling prompts for the new task slots so the Secretary can ask for missing task information during an intent flow (e.g., ask for title, description, location, category, and which task to update).",
-      "reqIds": [
-        "REQ-5"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-integrate-the-task-intent-system-into-the-secretary-runtime-so-task-intents-are-actually-executed-from-chat-input-when-user-text-is-received-classify-to-a-task-intent-when-appropriate-run-slot-filling-using-the-intent-flow-runner-and-on-completion-call-the-existing-task-backend-methods-via-the-current-actor-createtask-listtasksbylocation-gettask-updatetask-and-present-a-short-english-confirmation-result-message-in-the-secretary-chat",
-      "title": "Integrate the task intent system into the Secretary runtime so task intents are actually executed from chat input: when user text is received, classify to a task intent when appropriate, run slot-filling using the intent flow runner, and on completion call the existing task backend methods via the current actor (createTask, listTasksByLocation, getTask/updateTask) and present a short English confirmation/result message in the Secretary chat.",
-      "reqIds": [
-        "REQ-6"
       ],
       "version": 1
     }
@@ -60,12 +36,13 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Secretary integration: add intents create_task, find_tasks, update_task to connect conversational commands to the task backend",
+      "summary": "Set up neighborhood instances: use existing geography data, detect/choose user location, and map each user to a single local instance.",
       "reqIds": [],
       "status": "pending"
     }
   ],
-  "projectName": "Phase 4 Secretary integration: add task intents (create_task, find_tasks, update_task)",
+  "gameProjectType": "none",
+  "projectName": "Set up neighborhood-based instances using geography data and user location selection",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
