--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,34 +1,16 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "Project to set up neighborhood-based instances using geography data and user location mapping.",
-  "architectural_notes": [
-    "Neighborhood instance selection should use existing geography data and map each user to exactly one local instance based on detected or chosen location."
-  ],
+  "summary": "Build a Structured Civic Task Engine with an issue creation form that will include fields for title, description, category, location selection, and optional photos (implemented as atomic steps).",
+  "architectural_notes": [],
   "known_issues": [],
   "isFixRequest": false,
   "existing_features": [
     {
-      "id": "feature-use-the-existing-u-s-geography-dataset-and-existing-geography-query-hooks-to-let-the-user-choose-a-location-state-county-place-and-derive-a-single-canonical-locationid-hierarchicalid-for-the-session-device",
-      "title": "Use the existing U.S. geography dataset and existing geography query hooks to let the user choose a location (state → county → place) and derive a single canonical locationId (hierarchicalId) for the session/device.",
+      "id": "feature-extend-the-guided-report-issue-creation-flow-secretary-to-collect-and-store-a-new-text-field-named-issuetitle-a-short-title-for-the-issue-as-part-of-the-issue-creation-draft-using-the-existing-secretary-text-input-control",
+      "title": "Extend the guided report-issue creation flow (Secretary) to collect and store a new text field named `issueTitle` (a short title for the issue) as part of the issue creation draft, using the existing Secretary text input control.",
       "reqIds": [
         "REQ-1"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-add-a-location-acquisition-flow-that-supports-either-a-detecting-device-location-via-the-browser-geolocation-api-or-b-manually-choosing-a-location-with-clear-fallback-behavior-when-permission-is-denied-or-unavailable",
-      "title": "Add a location acquisition flow that supports either (a) detecting device location via the browser Geolocation API or (b) manually choosing a location, with clear fallback behavior when permission is denied or unavailable.",
-      "reqIds": [
-        "REQ-2"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-map-the-chosen-detected-user-location-to-exactly-one-local-whisper-instance-name-and-use-that-instance-consistently-in-the-feed-persisting-the-chosen-location-so-subsequent-visits-reopen-the-same-local-instance-by-default",
-      "title": "Map the chosen/detected user location to exactly one local Whisper instance name and use that instance consistently in the Feed, persisting the chosen location so subsequent visits reopen the same local instance by default.",
-      "reqIds": [
-        "REQ-3"
       ],
       "version": 1
     }
@@ -36,13 +18,12 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Set up neighborhood instances: use existing geography data, detect/choose user location, and map each user to a single local instance.",
+      "summary": "Add a new text input field (issueTitle) to the issue creation form.",
       "reqIds": [],
       "status": "pending"
     }
   ],
-  "gameProjectType": "none",
-  "projectName": "Set up neighborhood-based instances using geography data and user location selection",
+  "projectName": "Add issueTitle field to the issue reporting (guided) creation flow",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
