--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,30 +1,29 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "New project",
+  "summary": "Project includes adding a photo upload field to a target form (UI file input, minimal state handling, and a backend placeholder to store a photo reference).",
   "architectural_notes": [],
   "known_issues": [],
   "isFixRequest": false,
   "existing_features": [
     {
-      "id": "feature-update-the-secretary-guided-report-issue-flow-to-collect-location-via-a-hierarchical-selector-state-county-place-city-instead-of-or-in-addition-to-the-current-single-typeahead-step-and-store-the-resulting-canonical-locationid-plus-a-human-readable-location-label-in-the-guided-report-draft-so-the-confirmation-summary-displays-the-selected-location-reliably",
-      "title": "Update the Secretary guided report-issue flow to collect location via a hierarchical selector (state → county → place/city) instead of (or in addition to) the current single typeahead step, and store the resulting canonical `locationId` plus a human-readable location label in the guided report draft so the confirmation summary displays the selected location reliably.",
-      "reqIds": [
-        "REQ-1"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-add-any-required-secretary-specific-ui-component-s-to-render-the-hierarchical-location-selector-in-the-widget-composing-from-existing-geography-selector-components-hooks-where-possible-and-ensure-it-matches-the-app-s-existing-styling-system-shadcn-tailwind-and-keyboard-accessibility-expectations",
-      "title": "Add any required Secretary-specific UI component(s) to render the hierarchical location selector in the widget, composing from existing geography selector components/hooks where possible, and ensure it matches the app’s existing styling system (shadcn + Tailwind) and keyboard/accessibility expectations.",
+      "id": "feature-in-frontend-src-components-feed-postcomposer-tsx-add-minimal-react-state-handling-for-the-existing-photo-optional-file-input-so-the-component-stores-the-currently-selected-file-or-null-when-the-user-chooses-an-image-without-wiring-any-upload-storage-behavior",
+      "title": "In `frontend/src/components/feed/PostComposer.tsx`, add minimal React state handling for the existing \"Photo (optional)\" file input so the component stores the currently selected file (or null) when the user chooses an image, without wiring any upload/storage behavior.",
       "reqIds": [
         "REQ-2"
       ],
       "version": 1
     }
   ],
-  "new_feature_requests": [],
-  "projectName": "Step 4: Add hierarchical location selector (state → county → city) to the Secretary guided report-issue flow",
+  "new_feature_requests": [
+    {
+      "id": "AR-1",
+      "summary": "Add a photo upload field to the target form (file input UI, minimal state handling, backend placeholder for photo reference).",
+      "reqIds": [],
+      "status": "in_progress"
+    }
+  ],
+  "projectName": "Micro step 2: Store selected photo file in PostComposer state (no upload)",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
