--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,40 +1,54 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "Build and refine core app pages with a focus on the Profile page, correct onboarding navigation from the \"Get Started\" button, and consistent styling/back navigation across Feed, Tasks, and Geography pages.",
-  "architectural_notes": [],
-  "known_issues": [],
-  "isFixRequest": false,
+  "summary": "Restyle the Whisper frontend Profile page to a more grounded, trustworthy, civic-aligned look while keeping existing structure and functionality unchanged.",
+  "architectural_notes": [
+    "Profile page redesign is styling-only: do not change logic, state, data fetching, or component structure.",
+    "Allowed changes: update className props, add visual wrappers (e.g., Radix Card), and use existing deps (Tailwind, Radix UI, Lucide-react, clsx, tailwind-merge, cva).",
+    "Target design direction: deep navy/slate base with teal/cyan accents and warm gold highlights; stronger elevation/borders; subtle glassmorphism; mobile-first spacing and touch targets."
+  ],
+  "known_issues": [
+    "Current Profile page styling feels too light/fruity (pastel gradients/soft colors) and lacks strong visual hierarchy/accentuation; needs more solid, trustworthy civic look."
+  ],
+  "isFixRequest": true,
   "existing_features": [
     {
-      "id": "feature-update-the-home-page-get-started-call-to-action-so-it-directs-the-user-into-the-becoming-a-user-flow-by-taking-them-to-the-profile-page-and-prompting-authentication-if-needed-instead-of-only-opening-the-secretary-widget-apply-this-behavior-to-the-cta-in-the-get-started-section-app-tsx-section-id-get-started-and-ensure-the-interaction-is-base-path-safe-uses-joinbasepath-and-triggers-popstate-updates",
-      "title": "Update the Home page “Get Started” call-to-action so it directs the user into the “becoming a user” flow by taking them to the Profile page and prompting authentication if needed (instead of only opening the Secretary widget). Apply this behavior to the CTA in the “Get Started” section (App.tsx section id=\"get-started\") and ensure the interaction is base-path-safe (uses joinBasePath and triggers popstate updates).",
+      "id": "feature-update-the-whisper-profile-page-styling-to-a-more-solid-grounded-trustworthy-civic-aesthetic-while-preserving-the-existing-page-structure-and-all-functionality-apply-the-specified-palette-deep-navy-slate-base-teal-cyan-accents-warm-gold-highlights-and-increase-visual-hierarchy-using-stronger-elevation-subtle-borders-and-light-glassmorphism-implement-changes-only-via-tailwind-classname-updates-and-visual-wrappers-using-existing-ui-components-e-g-card-and-existing-dependencies",
+      "title": "Update the Whisper Profile page styling to a more solid, grounded, trustworthy civic aesthetic while preserving the existing page structure and all functionality. Apply the specified palette (deep navy/slate base, teal/cyan accents, warm gold highlights) and increase visual hierarchy using stronger elevation, subtle borders, and light glassmorphism. Implement changes only via Tailwind className updates and visual wrappers using existing UI components (e.g., Card) and existing dependencies.",
       "reqIds": [
         "REQ-1"
       ],
       "version": 1
     },
     {
-      "id": "feature-add-consistent-backward-navigation-controls-to-the-feed-tasks-and-geography-pages-using-the-same-ui-pattern-labeling-placement-and-behavior-the-back-action-must-reliably-navigate-to-the-appropriate-previous-logical-destination-and-be-base-path-safe-pushstate-popstateevent-or-history-back-when-appropriate-with-consistent-styling",
-      "title": "Add consistent backward navigation controls to the Feed, Tasks, and Geography pages using the same UI pattern (labeling, placement, and behavior). The back action must reliably navigate to the appropriate previous logical destination and be base-path-safe (pushState + PopStateEvent, or history.back when appropriate) with consistent styling.",
+      "id": "feature-enhance-the-wsp-token-balance-section-styling-in-frontend-src-pages-profilepage-tsx-to-strongly-accentuate-the-balance-make-the-numeric-display-larger-bolder-with-gradient-text-teal-cyan-and-subtle-emphasis-e-g-glow-text-shadow-via-utilities-where-available-add-conditional-visual-flourish-when-the-balance-is-0-e-g-sparkles-icon-and-or-progress-ring-element-without-changing-balance-logic-keep-existing-loading-and-zero-balance-subtext-behavior",
+      "title": "Enhance the WSP Token Balance section styling in frontend/src/pages/ProfilePage.tsx to strongly accentuate the balance: make the numeric display larger/bolder with gradient text (teal→cyan) and subtle emphasis (e.g., glow/text-shadow via utilities where available). Add conditional visual flourish when the balance is > 0 (e.g., Sparkles icon and/or progress ring element) without changing balance logic. Keep existing loading and zero-balance subtext behavior.",
       "reqIds": [
         "REQ-2"
       ],
       "version": 1
     },
     {
-      "id": "feature-normalize-page-layout-styling-across-feed-tasks-and-geography-so-they-feel-like-the-same-application-section-consistent-header-approach-spacing-and-card-styling-in-particular-remove-the-bespoke-fixed-black-header-styling-on-geographypage-and-align-it-with-the-layout-used-on-other-pages-e-g-homeheader-consistent-main-container-spacing",
-      "title": "Normalize page layout styling across Feed, Tasks, and Geography so they feel like the same application section (consistent header approach, spacing, and card styling). In particular, remove the bespoke fixed black header styling on GeographyPage and align it with the layout used on other pages (e.g., HomeHeader + consistent main container spacing).",
+      "id": "feature-enhance-the-contribution-points-section-styling-in-frontend-src-pages-profilepage-tsx-apply-distinct-accent-treatments-per-category-city-voting-bounty-token-using-colored-borders-and-or-icons-reinforce-hierarchy-category-label-vs-value-and-add-wholesome-motivational-subtext-below-the-section-header-e-g-your-contributions-build-stronger-communities-for-categories-whose-point-value-is-0-show-a-small-visual-hint-such-as-a-sparkles-icon-and-or-an-earn-more-link-styled-element-non-navigating-if-no-route-exists-without-changing-component-structure-or-data-logic",
+      "title": "Enhance the Contribution Points section styling in frontend/src/pages/ProfilePage.tsx: apply distinct accent treatments per category (City/Voting/Bounty/Token) using colored borders and/or icons, reinforce hierarchy (category label vs value), and add wholesome motivational subtext below the section header (e.g., “Your contributions build stronger communities”). For categories whose point value is 0, show a small visual hint such as a Sparkles icon and/or an “Earn more” link-styled element (non-navigating if no route exists) without changing component structure or data logic.",
       "reqIds": [
         "REQ-3"
       ],
       "version": 1
     },
     {
-      "id": "feature-on-the-profile-page-add-a-clear-consistent-back-navigation-control-matching-the-feed-tasks-geography-back-pattern-so-users-can-easily-return-to-the-home-page-after-onboarding-profile-edits",
-      "title": "On the Profile page, add a clear, consistent Back navigation control (matching the Feed/Tasks/Geography back pattern) so users can easily return to the Home page after onboarding/profile edits.",
+      "id": "feature-restyle-the-staking-and-governance-sections-frontend-src-pages-profile-components-stakingsection-tsx-and-frontend-src-pages-profile-components-governancesection-tsx-to-match-the-new-civic-palette-and-improve-cta-prominence-increase-button-size-weight-and-apply-the-requested-gradient-backgrounds-teal-cyan-for-staking-ctas-purple-pink-for-governance-create-proposal-add-hover-scale-effects-using-existing-tailwind-utilities-tailwind-animate-if-already-configured-and-ensure-icons-use-lucide-react-with-accent-colors-do-not-change-any-staking-governance-logic-validation-or-dialog-behavior",
+      "title": "Restyle the Staking and Governance sections (frontend/src/pages/profile/components/StakingSection.tsx and frontend/src/pages/profile/components/GovernanceSection.tsx) to match the new civic palette and improve CTA prominence: increase button size/weight and apply the requested gradient backgrounds (teal→cyan for staking CTAs; purple→pink for governance “Create Proposal”), add hover scale effects (using existing Tailwind utilities / tailwind-animate if already configured), and ensure icons use Lucide-react with accent colors. Do not change any staking/governance logic, validation, or dialog behavior.",
       "reqIds": [
         "REQ-4"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-apply-mobile-first-spacing-and-typography-improvements-across-the-profile-page-and-its-sections-ensure-vertical-stacking-generous-padding-p-6-where-appropriate-touch-friendly-buttons-min-h-12-bolder-headings-text-xl-text-2xl-font-bold-and-readable-body-text-text-base-font-medium-ensure-contrast-and-accessibility-for-text-on-dark-backgrounds-including-focus-visible-rings-consistent-with-accent-colors",
+      "title": "Apply mobile-first spacing and typography improvements across the Profile page and its sections: ensure vertical stacking, generous padding (p-6 where appropriate), touch-friendly buttons (min-h-12), bolder headings (text-xl/text-2xl, font-bold), and readable body text (text-base, font-medium). Ensure contrast and accessibility for text on dark backgrounds, including focus-visible rings consistent with accent colors.",
+      "reqIds": [
+        "REQ-5"
       ],
       "version": 1
     }
@@ -42,24 +56,13 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Implement/Profile page UI and functionality",
-      "reqIds": [],
-      "status": "pending"
-    },
-    {
-      "id": "AR-2",
-      "summary": "Update \"Get Started\" button to route users into the onboarding/becoming-a-user flow",
-      "reqIds": [],
-      "status": "pending"
-    },
-    {
-      "id": "AR-3",
-      "summary": "Ensure Feed, Tasks, and Geography pages share consistent styling and backward navigation patterns",
+      "summary": "Enhance and restyle the existing Whisper Profile page UI (visual hierarchy, palette, cards/CTAs, icons) without changing logic or component structure.",
       "reqIds": [],
       "status": "pending"
     }
   ],
-  "projectName": "Profile page onboarding navigation + consistent styling/back navigation across Feed, Tasks, and Geography",
+  "gameProjectType": "none",
+  "projectName": "Whisper",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
