--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,68 +1,46 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "Restyle the Whisper frontend Profile page to a more grounded, trustworthy, civic-aligned look while keeping existing structure and functionality unchanged.",
-  "architectural_notes": [
-    "Profile page redesign is styling-only: do not change logic, state, data fetching, or component structure.",
-    "Allowed changes: update className props, add visual wrappers (e.g., Radix Card), and use existing deps (Tailwind, Radix UI, Lucide-react, clsx, tailwind-merge, cva).",
-    "Target design direction: deep navy/slate base with teal/cyan accents and warm gold highlights; stronger elevation/borders; subtle glassmorphism; mobile-first spacing and touch targets."
-  ],
+  "summary": "Project now includes work on expanded whisper functionality; current known issue is Profile page stuck in an infinite spinning/loading state after recent profile design/type changes.",
+  "architectural_notes": [],
   "known_issues": [
-    "Current Profile page styling feels too light/fruity (pastel gradients/soft colors) and lacks strong visual hierarchy/accentuation; needs more solid, trustworthy civic look."
+    "Profile page fails to display and remains stuck in a spinning/loading state after recent profile design/type changes."
   ],
   "isFixRequest": true,
-  "existing_features": [
-    {
-      "id": "feature-update-the-whisper-profile-page-styling-to-a-more-solid-grounded-trustworthy-civic-aesthetic-while-preserving-the-existing-page-structure-and-all-functionality-apply-the-specified-palette-deep-navy-slate-base-teal-cyan-accents-warm-gold-highlights-and-increase-visual-hierarchy-using-stronger-elevation-subtle-borders-and-light-glassmorphism-implement-changes-only-via-tailwind-classname-updates-and-visual-wrappers-using-existing-ui-components-e-g-card-and-existing-dependencies",
-      "title": "Update the Whisper Profile page styling to a more solid, grounded, trustworthy civic aesthetic while preserving the existing page structure and all functionality. Apply the specified palette (deep navy/slate base, teal/cyan accents, warm gold highlights) and increase visual hierarchy using stronger elevation, subtle borders, and light glassmorphism. Implement changes only via Tailwind className updates and visual wrappers using existing UI components (e.g., Card) and existing dependencies.",
-      "reqIds": [
-        "REQ-1"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-enhance-the-wsp-token-balance-section-styling-in-frontend-src-pages-profilepage-tsx-to-strongly-accentuate-the-balance-make-the-numeric-display-larger-bolder-with-gradient-text-teal-cyan-and-subtle-emphasis-e-g-glow-text-shadow-via-utilities-where-available-add-conditional-visual-flourish-when-the-balance-is-0-e-g-sparkles-icon-and-or-progress-ring-element-without-changing-balance-logic-keep-existing-loading-and-zero-balance-subtext-behavior",
-      "title": "Enhance the WSP Token Balance section styling in frontend/src/pages/ProfilePage.tsx to strongly accentuate the balance: make the numeric display larger/bolder with gradient text (teal→cyan) and subtle emphasis (e.g., glow/text-shadow via utilities where available). Add conditional visual flourish when the balance is > 0 (e.g., Sparkles icon and/or progress ring element) without changing balance logic. Keep existing loading and zero-balance subtext behavior.",
-      "reqIds": [
-        "REQ-2"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-enhance-the-contribution-points-section-styling-in-frontend-src-pages-profilepage-tsx-apply-distinct-accent-treatments-per-category-city-voting-bounty-token-using-colored-borders-and-or-icons-reinforce-hierarchy-category-label-vs-value-and-add-wholesome-motivational-subtext-below-the-section-header-e-g-your-contributions-build-stronger-communities-for-categories-whose-point-value-is-0-show-a-small-visual-hint-such-as-a-sparkles-icon-and-or-an-earn-more-link-styled-element-non-navigating-if-no-route-exists-without-changing-component-structure-or-data-logic",
-      "title": "Enhance the Contribution Points section styling in frontend/src/pages/ProfilePage.tsx: apply distinct accent treatments per category (City/Voting/Bounty/Token) using colored borders and/or icons, reinforce hierarchy (category label vs value), and add wholesome motivational subtext below the section header (e.g., “Your contributions build stronger communities”). For categories whose point value is 0, show a small visual hint such as a Sparkles icon and/or an “Earn more” link-styled element (non-navigating if no route exists) without changing component structure or data logic.",
-      "reqIds": [
-        "REQ-3"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-restyle-the-staking-and-governance-sections-frontend-src-pages-profile-components-stakingsection-tsx-and-frontend-src-pages-profile-components-governancesection-tsx-to-match-the-new-civic-palette-and-improve-cta-prominence-increase-button-size-weight-and-apply-the-requested-gradient-backgrounds-teal-cyan-for-staking-ctas-purple-pink-for-governance-create-proposal-add-hover-scale-effects-using-existing-tailwind-utilities-tailwind-animate-if-already-configured-and-ensure-icons-use-lucide-react-with-accent-colors-do-not-change-any-staking-governance-logic-validation-or-dialog-behavior",
-      "title": "Restyle the Staking and Governance sections (frontend/src/pages/profile/components/StakingSection.tsx and frontend/src/pages/profile/components/GovernanceSection.tsx) to match the new civic palette and improve CTA prominence: increase button size/weight and apply the requested gradient backgrounds (teal→cyan for staking CTAs; purple→pink for governance “Create Proposal”), add hover scale effects (using existing Tailwind utilities / tailwind-animate if already configured), and ensure icons use Lucide-react with accent colors. Do not change any staking/governance logic, validation, or dialog behavior.",
-      "reqIds": [
-        "REQ-4"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-apply-mobile-first-spacing-and-typography-improvements-across-the-profile-page-and-its-sections-ensure-vertical-stacking-generous-padding-p-6-where-appropriate-touch-friendly-buttons-min-h-12-bolder-headings-text-xl-text-2xl-font-bold-and-readable-body-text-text-base-font-medium-ensure-contrast-and-accessibility-for-text-on-dark-backgrounds-including-focus-visible-rings-consistent-with-accent-colors",
-      "title": "Apply mobile-first spacing and typography improvements across the Profile page and its sections: ensure vertical stacking, generous padding (p-6 where appropriate), touch-friendly buttons (min-h-12), bolder headings (text-xl/text-2xl, font-bold), and readable body text (text-base, font-medium). Ensure contrast and accessibility for text on dark backgrounds, including focus-visible rings consistent with accent colors.",
-      "reqIds": [
-        "REQ-5"
-      ],
-      "version": 1
-    }
-  ],
+  "existing_features": [],
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Enhance and restyle the existing Whisper Profile page UI (visual hierarchy, palette, cards/CTAs, icons) without changing logic or component structure.",
+      "summary": "Implement expanded whisper functionality (incremental development steps).",
       "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-2",
+      "summary": "Create a shared backend types module at `backend/types.mo` (it does not currently exist) and define an empty placeholder domain type for `Issue` as a public type alias (e.g., `public type Issue = {};`).",
+      "reqIds": [
+        "REQ-1"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-3",
+      "summary": "In `backend/types.mo`, define an empty placeholder domain type for `Task` as a public type alias (e.g., `public type Task = {};`).",
+      "reqIds": [
+        "REQ-2"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-4",
+      "summary": "In `backend/types.mo`, define an empty placeholder domain type for `FeedPost` as a public type alias (e.g., `public type FeedPost = {};`).",
+      "reqIds": [
+        "REQ-3"
+      ],
       "status": "pending"
     }
   ],
-  "gameProjectType": "none",
-  "projectName": "Whisper",
+  "projectName": "Expanded development: add placeholder backend domain types module (Issue, Task, FeedPost)",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
